--- a/src/components/InputField.css
+++ b/src/components/InputField.css
@@ -56,6 +56,13 @@
   height: 100%;
 }
 
+.input-field-icon-button {
+  padding: 0;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
 .input-field-input {
   flex: 1;
   width: 100%;
